<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/dark_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_list_quiz_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorDark"
        app:cardCornerRadius="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_list_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_image" />
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/fragment_list_view"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/image_cover"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="@id/fragment_list_quiz_cart"
        app:layout_constraintEnd_toEndOf="@id/fragment_list_quiz_cart"
        app:layout_constraintStart_toStartOf="@id/fragment_list_quiz_cart" />

    <TextView
        android:id="@+id/fragment_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/quiz_title"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_quiz_cart" />

    <TextView
        android:id="@+id/fragment_list_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/quiz_description"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_title"
        app:lineHeight="28dp" />

    <TextView
        android:id="@+id/fragment_list_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/difficulty"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_description" />

    <Button
        android:id="@+id/fragment_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/outline_button_background"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:text="@string/view_quiz"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_list_difficulty" />
</androidx.constraintlayout.widget.ConstraintLayout>