<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDark"
    tools:context=".QuizFragment">

    <ImageButton
        android:id="@+id/fragment_quiz_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:padding="16dp"
        android:src="@drawable/quiz_close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_quiz_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/crimson_text"
        android:text="@string/loading_quiz"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_close_button" />

    <TextView
        android:id="@+id/fragment_quiz_question_number_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/question"
        android:textColor="@color/colorLightText"
        app:layout_constraintEnd_toEndOf="@+id/fragment_quiz_close_button"
        app:layout_constraintStart_toStartOf="@+id/fragment_quiz_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_title" />

    <TextView
        android:id="@+id/fragment_quiz_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/fragment_quiz_question_number_title"
        app:layout_constraintStart_toStartOf="@+id/fragment_quiz_question_number_title"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_question_number_title" />

    <ProgressBar
        android:id="@+id/fragment_quiz_question_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:progress="100"
        android:progressDrawable="@drawable/circular_progress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_quiz_question_number"
        app:layout_constraintEnd_toEndOf="@+id/fragment_quiz_title"
        app:layout_constraintStart_toStartOf="@+id/fragment_quiz_close_button"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_title" />

    <TextView
        android:id="@+id/fragment_quiz_question_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/work_sans"
        android:text="@string/_10"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_quiz_question_progress"
        app:layout_constraintEnd_toEndOf="@+id/fragment_quiz_question_progress"
        app:layout_constraintStart_toStartOf="@+id/fragment_quiz_question_progress"
        app:layout_constraintTop_toTopOf="@+id/fragment_quiz_question_progress" />

    <TextView
        android:id="@+id/fragment_quiz_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/fetching_data"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_question_number" />

    <Button
        android:id="@+id/fragment_quiz_option_one"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_light_button_background"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_question" />

    <Button
        android:id="@+id/fragment_quiz_option_two"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_light_button_background"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_option_one" />

    <Button
        android:id="@+id/fragment_quiz_option_three"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_light_button_background"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:text="@string/option_button"
        android:textAllCaps="false"
        android:textColor="@color/colorLightText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_option_two" />

    <TextView
        android:id="@+id/fragment_quiz_option_feedback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/verifying_answer"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_quiz_option_three" />

    <Button
        android:id="@+id/fragment_quiz_next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/primary_button_background"
        android:fontFamily="@font/work_sans"
        android:text="@string/next_question"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>